fixed remarks horizontal scroll, update year

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -10,6 +10,7 @@
   &__body {
     background: $bg;
     margin: 0;
+    overflow-x: hidden;
   }
 }
 
